# phoebe-lab.ui

./: ARCHITECTURE.md  Dockerfile.api  Dockerfile.manager  Dockerfile.server  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api_server.sh  run_dash_ui.py  run_phoebe_ui.sh  run_ui.sh
api/: main.py
api/routes/: dash.py  session.py
api/services/: server_proxy.py
client/: __init__.py  phoebe_api.py  session_api.py
common/: __init__.py  serialization.py
docker/: Dockerfile.api  Dockerfile.manager  Dockerfile.server  Dockerfile.ui  README.md  docker-compose.yml  requirements.server.txt  requirements.ui.txt
examples/: tic219178975.gochile.R
manager/: config.toml  session_manager.old.py  session_manager.py
server/: server.old.py  server.py
tests/: test_phoebe_server_integration.py
tests/test_session_manager/: test_session_lifecycle.py
ui/: dash_ui.py  phoebe_ui.py  ui.py  utils.py
