[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoebe-gui"
version = "0.1.0"
description = "A minimalistic PHOEBE user interface"
authors = [
    { name = "Andrej Prša", email = "andrej.prsa@villanova.edu" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "phoebe",
    "celery[redis]",
    "pyzmq",
    "psutil",
    "nicegui",
    "requests"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools]
package-dir = {"" = "."}
